refactor: migrate Collections/Arrays.asList to Java 9+ collection factories (#3188)
* refactor: migrate Collections/Arrays.asList to Java 9+ factory methods

Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Arrays.asList() with List.of(), Collections.emptyList/Map/Set()
with List/Map/Set.of(), Collections.singletonList() with List.of(),
Collections.unmodifiableList() with List.copyOf(), and
Collections.unmodifiableSet() with Set.copyOf() across 79 files.
Skips protobuf-generated code (ReliableDelivery.java, ReplicatedEventSourcing.java).

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization

* refactor: migrate remaining Arrays.asList to List.of() (follow-up)

Motivation:
Follow-up to the initial collection factory migration, covering
remaining files that were missed in the first pass.

Modification:
Replace remaining Arrays.asList() with List.of() and
Collections.singleton() with Set.of() in 19 additional files.

Result:
More complete migration to Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization

* fix: revert Collections.emptySet/emptyMap/emptyList to original API

Motivation:
Review feedback: prefer Collections.emptySet(), Collections.emptyMap(),
Collections.emptyList() over Set.of(), Map.of(), List.of() for empty
collections since they use well-known immutable singleton APIs.

Modification:
Revert empty collection conversions (Set.of() -> Collections.emptySet(),
Map.of() -> Collections.emptyMap(), List.of() -> Collections.emptyList())
while keeping non-empty Arrays.asList -> List.of and
Collections.singletonList -> List.of conversions.

Result:
Empty collections use the established Collections.empty* API while
non-empty collections use the modern List.of/Set.of/