@@ -17,7 +17,6 @@ import static org.apache.pekko.util.ByteString.emptyByteString;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 
 import java.nio.ByteOrder;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.TimeUnit;
@@ -264,7 +263,7 @@ public class BidiFlowDocTest extends AbstractJavaTest {
                     .build());
     final Flow<Message, Message, NotUsed> flow = stack.atop(stack.reversed()).join(pingpong);
     final CompletionStage<List<Message>> result =
-        Source.from(Arrays.asList(0, 1, 2))
+        Source.from(List.of(0, 1, 2))
             .<Message>map(id -> new Ping(id))
             .via(flow)
             .grouped(10)
