@@ -17,7 +17,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.TimeUnit;
 import jdocs.AbstractJavaTest;
@@ -54,7 +54,7 @@ class KillSwitchDocTest extends AbstractJavaTest {
   public void uniqueKillSwitchShutdownExample() throws Exception {
     // #unique-shutdown
     final Source<Integer, NotUsed> countingSrc =
-        Source.from(new ArrayList<>(Arrays.asList(1, 2, 3, 4)))
+        Source.from(new ArrayList<>(List.of(1, 2, 3, 4)))
             .delay(Duration.ofSeconds(1), DelayOverflowStrategy.backpressure());
     final Sink<Integer, CompletionStage<Integer>> lastSnk = Sink.last();
 
@@ -78,7 +78,7 @@ class KillSwitchDocTest extends AbstractJavaTest {
   public static void uniqueKillSwitchAbortExample() throws Exception {
     // #unique-abort
     final Source<Integer, NotUsed> countingSrc =
-        Source.from(new ArrayList<>(Arrays.asList(1, 2, 3, 4)))
+        Source.from(new ArrayList<>(List.of(1, 2, 3, 4)))
             .delay(Duration.ofSeconds(1), DelayOverflowStrategy.backpressure());
     final Sink<Integer, CompletionStage<Integer>> lastSnk = Sink.last();
 
@@ -103,7 +103,7 @@ class KillSwitchDocTest extends AbstractJavaTest {
   public void sharedKillSwitchShutdownExample() throws Exception {
     // #shared-shutdown
     final Source<Integer, NotUsed> countingSrc =
-        Source.from(new ArrayList<>(Arrays.asList(1, 2, 3, 4)))
+        Source.from(new ArrayList<>(List.of(1, 2, 3, 4)))
             .delay(Duration.ofSeconds(1), DelayOverflowStrategy.backpressure());
     final Sink<Integer, CompletionStage<Integer>> lastSnk = Sink.last();
     final SharedKillSwitch killSwitch = KillSwitches.shared("my-kill-switch");
@@ -135,7 +135,7 @@ class KillSwitchDocTest extends AbstractJavaTest {
   public static void sharedKillSwitchAbortExample() throws Exception {
     // #shared-abort
     final Source<Integer, NotUsed> countingSrc =
-        Source.from(new ArrayList<>(Arrays.asList(1, 2, 3, 4)))
+        Source.from(new ArrayList<>(List.of(1, 2, 3, 4)))
             .delay(Duration.ofSeconds(1), DelayOverflowStrategy.backpressure());
     final Sink<Integer, CompletionStage<Integer>> lastSnk = Sink.last();
     final SharedKillSwitch killSwitch = KillSwitches.shared("my-kill-switch");
