@@ -15,7 +15,6 @@ package jdocs.stream.javadsl.cookbook;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.apache.pekko.NotUsed;
@@ -47,9 +46,7 @@ public class RecipeFlattenList extends RecipeTest {
       {
         Source<List<Message>, NotUsed> someDataSource =
             Source.from(
-                Arrays.asList(
-                    Arrays.asList(new Message("1")),
-                    Arrays.asList(new Message("2"), new Message("3"))));
+                List.of(List.of(new Message("1")), List.of(new Message("2"), new Message("3"))));
 
         // #flattening-lists
         Source<List<Message>, NotUsed> myData = someDataSource;
