@@ -16,7 +16,6 @@ package jdocs.stream.operators;
 import static org.hamcrest.CoreMatchers.hasItems;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.CompletionStage;
@@ -54,7 +53,7 @@ public class WithContextTest extends AbstractJavaTest {
 
     // values with their contexts as pairs
     Collection<Pair<String, Integer>> values =
-        Arrays.asList(Pair.create("eins", 1), Pair.create("zwei", 2), Pair.create("drei", 3));
+        List.of(Pair.create("eins", 1), Pair.create("zwei", 2), Pair.create("drei", 3));
 
     // a regular source with pairs as elements
     Source<Pair<String, Integer>, NotUsed> source = Source.from(values);
@@ -108,7 +107,7 @@ public class WithContextTest extends AbstractJavaTest {
 
     // running the flow with some sample data and asserting the outcome
     Collection<Pair<String, Integer>> values =
-        Arrays.asList(Pair.create("eins", 1), Pair.create("zwei", 2), Pair.create("drei", 3));
+        List.of(Pair.create("eins", 1), Pair.create("zwei", 2), Pair.create("drei", 3));
 
     SourceWithContext<String, Integer, NotUsed> source =
         Source.from(values).asSourceWithContext(Pair::second).map(Pair::first);
