@@ -20,7 +20,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
@@ -109,7 +108,7 @@ class AuctionEntity
   public static ReplicaId R1 = new ReplicaId("R1");
   public static ReplicaId R2 = new ReplicaId("R2");
 
-  public static Set<ReplicaId> ALL_REPLICAS = new HashSet<>(Arrays.asList(R1, R2));
+  public static Set<ReplicaId> ALL_REPLICAS = Set.of(R1, R2);
 
   private final ActorContext<Command> context;
   private final TimerScheduler<Command> timers;
