@@ -13,7 +13,6 @@
 
 package org.apache.pekko.persistence.typed.javadsl;
 
-import static java.util.Collections.singletonList;
 import static org.apache.pekko.Done.done;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -23,6 +22,7 @@ import com.fasterxml.jackson.annotation.JsonTypeInfo;
 import com.google.common.collect.Sets;
 import com.typesafe.config.ConfigFactory;
 import java.time.Duration;
+import java.util.Collections;
 import java.util.*;
 import org.apache.pekko.Done;
 import org.apache.pekko.actor.testkit.typed.annotations.JUnitJupiterTestKit;
@@ -277,9 +277,7 @@ public class EventSourcedBehaviorJavaDslTest {
     }
 
     private Effect<Event, State> incrementTwiceAndLog(State state, IncrementTwiceAndLog command) {
-      return Effect()
-          .persist(Arrays.asList(new Incremented(1), new Incremented(1)))
-          .thenRun(s -> log());
+      return Effect().persist(List.of(new Incremented(1), new Incremented(1))).thenRun(s -> log());
     }
 
     @Override
@@ -311,7 +309,7 @@ public class EventSourcedBehaviorJavaDslTest {
     TestProbe<State> probe = testKit.createTestProbe();
     c.tell(Increment.INSTANCE);
     c.tell(new GetValue(probe.ref()));
-    probe.expectMessage(new State(1, singletonList(0)));
+    probe.expectMessage(new State(1, List.of(0)));
   }
 
   @Test
@@ -322,14 +320,14 @@ public class EventSourcedBehaviorJavaDslTest {
     c.tell(Increment.INSTANCE);
     c.tell(Increment.INSTANCE);
     c.tell(new GetValue(probe.ref()));
-    probe.expectMessage(new State(3, Arrays.asList(0, 1, 2)));
+    probe.expectMessage(new State(3, List.of(0, 1, 2)));
 
     ActorRef<Command> c2 = testKit.spawn(counter(PersistenceId.ofUniqueId("c2")));
     c2.tell(new GetValue(probe.ref()));
-    probe.expectMessage(new State(3, Arrays.asList(0, 1, 2)));
+    probe.expectMessage(new State(3, List.of(0, 1, 2)));
     c2.tell(Increment.INSTANCE);
     c2.tell(new GetValue(probe.ref()));
-    probe.expectMessage(new State(4, Arrays.asList(0, 1, 2, 3)));
+    probe.expectMessage(new State(4, List.of(0, 1, 2, 3)));
   }
 
   @Test
@@ -357,8 +355,7 @@ public class EventSourcedBehaviorJavaDslTest {
     c.tell(Increment.INSTANCE);
     c.tell(IncrementLater.INSTANCE);
     eventHandlerProbe.expectMessage(Pair.create(State.EMPTY, new Incremented(1)));
-    eventHandlerProbe.expectMessage(
-        Pair.create(new State(1, Collections.singletonList(0)), new Incremented(10)));
+    eventHandlerProbe.expectMessage(Pair.create(new State(1, List.of(0)), new Incremented(10)));
   }
 
   @Test
@@ -408,7 +405,7 @@ public class EventSourcedBehaviorJavaDslTest {
     TestProbe<State> probe = testKit.createTestProbe();
     c.tell(Increment.INSTANCE);
     c.tell(new GetValue(probe.ref()));
-    probe.expectMessage(new State(1, singletonList(0)));
+    probe.expectMessage(new State(1, List.of(0)));
   }
 
   @Test
@@ -448,7 +445,7 @@ public class EventSourcedBehaviorJavaDslTest {
 
     TestProbe<State> stateProbe = testKit.createTestProbe();
     c.tell(new GetValue(stateProbe.ref()));
-    stateProbe.expectMessage(new State(3, Arrays.asList(0, 1, 2)));
+    stateProbe.expectMessage(new State(3, List.of(0, 1, 2)));
 
     TestProbe<Pair<State, Incremented>> eventHandlerProbe = testKit.createTestProbe();
     Behavior<Command> recovered =
@@ -463,10 +460,9 @@ public class EventSourcedBehaviorJavaDslTest {
                 });
     ActorRef<Command> c2 = testKit.spawn(recovered);
     // First 2 are snapshot
-    eventHandlerProbe.expectMessage(
-        Pair.create(new State(2, Arrays.asList(0, 1)), new Incremented(1)));
+    eventHandlerProbe.expectMessage(Pair.create(new State(2, List.of(0, 1)), new Incremented(1)));
     c2.tell(new GetValue(stateProbe.ref()));
-    stateProbe.expectMessage(new State(3, Arrays.asList(0, 1, 2)));
+    stateProbe.expectMessage(new State(3, List.of(0, 1, 2)));
   }
 
   @Test
@@ -546,7 +542,7 @@ public class EventSourcedBehaviorJavaDslTest {
 
     TestProbe<State> stateProbe = testKit.createTestProbe();
     c.tell(new GetValue(stateProbe.ref()));
-    stateProbe.expectMessage(new State(1, Collections.singletonList(0)));
+    stateProbe.expectMessage(new State(1, List.of(0)));
 
     List<EventEnvelope> events =
         queries
@@ -579,7 +575,7 @@ public class EventSourcedBehaviorJavaDslTest {
 
     TestProbe<State> stateProbe = testKit.createTestProbe();
     c.tell(new GetValue(stateProbe.ref()));
-    stateProbe.expectMessage(new State(1, Collections.singletonList(0)));
+    stateProbe.expectMessage(new State(1, List.of(0)));
 
     List<EventEnvelope> events =
         queries
@@ -595,7 +591,7 @@ public class EventSourcedBehaviorJavaDslTest {
 
     ActorRef<Command> c2 = testKit.spawn(transformer);
     c2.tell(new GetValue(stateProbe.ref()));
-    stateProbe.expectMessage(new State(1, Collections.singletonList(0)));
+    stateProbe.expectMessage(new State(1, List.of(0)));
   }
 
   // event-wrapper
